# ReMIX

./: .gitignore  IMPLEMENTATION_SPEC.md  README.md  index.html  pyproject.toml  slurm-10372635.out  slurm-15148384.out
assets/: Sphere-Bx8lWSiP.js  Sphere-DB_bkjF4.js  Sphere-D_t9I1mi.js  Sphere-b8FJJGbN.js  Stats-B5iICjRA.js  Stats-Bx3pOK1K.js  Stats-C3MsjFc1.js  Stats-DdabGfth.js  index-BScJv-nY.js  index-BcYQP7Qo.css  index-BjeIGxjp.js  index-CMc2A6uV.js  index-DZF2arnl.css  index-M0_5h3FJ.css  index-UPWDMEdG.js  index-jtje-gVs.css  katex-D36Ym_H7.css  three-CUUCCLmZ.js  three-Ccyamgv9.js  three-DdClqh2_.js
conf/: config.yaml  pipeline.yaml
data/: chains.json  stats.json
docs/: IMPLEMENTATION_SPEC.md  POSITIONING.md  ROADMAP.md  validation_gate.md
scripts/: build_human_validation_assignment.py  build_validated_instructions.py  dataset_breakdown.py  export_explorer_data.py  export_validation_app_data.py  export_website_data.py  export_website_stats.py  launch_andrena_instruction.sh  launch_explorer_umap.sh  launch_llm_validation_judge.sh  launch_sae_instruction.sh  llm_validation_judge.py  merge_instruction_step_json.py  mtg_jamendo_caption_audio.py  music4all_caption_audio.py  paper_data_stats.py  paper_validation_stats.py  prepare_mtg_jamendo_metadata.py  prepare_music4all_metadata.py  run_chains_demo_cloudflared.slurm.sh  run_chains_demo_localtunnel.slurm.sh  run_chains_demo_ngrok.slurm.sh  run_chains_demo_streamlit.slurm.sh  run_human_validation_cloudflared.slurm.sh  run_instruction_raw.sh  run_llm_validation_judge.sh  run_mtg_jamendo_caption_audio.sh  run_mtg_jamendo_lyrics.sh  run_pipeline_stage.sh  slurm_music4all_caption_audio.sbatch  stream_slurm_job.sh  sync_human_ratings.py
space/: Dockerfile  README.md  app.py  requirements.txt
video/: .gitignore  README.md  manim.cfg  (+2 more)
(+104 files in other folders)
